@@ -14,6 +14,9 @@ else
 	exit();
 }
 
+$_REQUEST['debug'] = true;
+$_REQUEST['log_sql'] = true;
+
 // install stuff based on what step we are on
 // things to consider:
 // install stuff on each page
@@ -25,10 +28,6 @@ else
 $GLOBALS['database'] = new sql(DB_SERVER, DB_USER, DB_PASS, DB_NAME);
 
 $GLOBALS['database']->install();
-
-// upgrade for good measure just to make sure
-if(isset($_REQUEST['upgrade']) && $_REQUEST['upgrade'] == true)
-	$GLOBALS['database']->upgrade();
 
 ?>
 Install script has completed, if there were errors you would see them above!
