@@ -303,7 +303,7 @@ class db_diskimage extends db_file
 			
 			if(!is_file(str_replace('/', DIRECTORY_SEPARATOR, $last_path)))
 			{
-				unset($_REQUEST['dir']);
+				unset($request['dir']);
 				$error = 'Directory does not exist!';
 			}
 		}
