@@ -106,106 +106,110 @@ class db_ids extends db_file
 	
 	static function get($request, &$count, &$error, $files = array())
 	{
-		if(count($files) > 0 && !isset($request['selected']))
+		if(USE_DATABASE)
 		{
-			$request['item'] = '';
-			foreach($files as $index => $file)
+			if(count($files) > 0 && !isset($request['selected']))
 			{
-				$request['item'] .= $file['id'] . ',';
-			}
-			$request['item'] = substr($request['item'], 0, strlen($request['item'])-1);
-		}
-		
-		// find id in database
-		$GLOBALS['database']->validate($request, $props, get_class());
-
-		// select an array of ids!
-		if(isset($request['selected']) && count($request['selected']) > 0 )
-		{
-			$return = $GLOBALS['database']->query(array(
-					'SELECT' => self::DATABASE,
-					'WHERE' => constant($request['cat'] . '::DATABASE') . '_id = ' . join(' OR ' . constant($request['cat'] . '::DATABASE') . '_id = ', $request['selected'])
-				)
-			);
-			
-			if(count($files) == 0)
-				return $return;
-			
-			// replace key for easy lookup
-			$ids = array();
-			foreach($return as $i => $id)
-			{
-				$ids[$id[constant($request['cat'] . '::DATABASE') . '_id']] = $id;
-			}
-			
-			// add id information to file
-			foreach($files as $index => $file)
-			{
-				if(!isset($ids[$file['id']]) || $ids[$file['id']]['Filepath'] != preg_replace($GLOBALS['alias_regexp'], $GLOBALS['paths'], $file['Filepath']))
+				$request['item'] = '';
+				foreach($files as $index => $file)
 				{
-					// handle file
-					$id = self::handle(preg_replace($GLOBALS['alias_regexp'], $GLOBALS['paths'], $file['Filepath']), true, array(constant($request['cat'] . '::DATABASE') . '_id' => $file['id']));
-					$tmp_id = $GLOBALS['database']->query(array(
+					$request['item'] .= $file['id'] . ',';
+				}
+				$request['item'] = substr($request['item'], 0, strlen($request['item'])-1);
+			}
+			
+			// find id in database
+			$GLOBALS['database']->validate($request, $props, get_class());
+	
+			// select an array of ids!
+			if(isset($request['selected']) && count($request['selected']) > 0 )
+			{
+				$return = $GLOBALS['database']->query(array(
+						'SELECT' => self::DATABASE,
+						'WHERE' => constant($request['cat'] . '::DATABASE') . '_id = ' . join(' OR ' . constant($request['cat'] . '::DATABASE') . '_id = ', $request['selected'])
+					)
+				);
+				
+				if(count($files) == 0)
+					return $return;
+				
+				// replace key for easy lookup
+				$ids = array();
+				foreach($return as $i => $id)
+				{
+					$ids[$id[constant($request['cat'] . '::DATABASE') . '_id']] = $id;
+				}
+				
+				// add id information to file
+				foreach($files as $index => $file)
+				{
+					if(!isset($ids[$file['id']]) || $ids[$file['id']]['Filepath'] != preg_replace($GLOBALS['alias_regexp'], $GLOBALS['paths'], $file['Filepath']))
+					{
+						// handle file
+						$id = self::handle(preg_replace($GLOBALS['alias_regexp'], $GLOBALS['paths'], $file['Filepath']), true, array(constant($request['cat'] . '::DATABASE') . '_id' => $file['id']));
+						$tmp_id = $GLOBALS['database']->query(array(
+								'SELECT' => self::DATABASE,
+								'WHERE' => 'id = ' . $id,
+								'LIMIT' => 1
+							)
+						);
+						
+						if(count($tmp_id) == 0)
+						{
+							$error = 'There was an error getting the IDs.';
+							return array();
+						}
+						
+						$ids[$file['id']] = $tmp_id[0];
+					}
+					
+					// merge with output array
+					$files[$index] = array_merge($ids[$file['id']], $files[$index]);
+			
+					// also set id to centralize id
+					$files[$index]['id'] = $ids[$file['id']]['id'];
+				}
+			}
+			elseif(isset($request['file']))
+			{
+				$files = array();
+				foreach($GLOBALS['tables'] as $i => $table)
+				{
+					if(isset($request[$table . '_id']) && is_numeric($request[$table . '_id']))
+					{
+						$files = $GLOBALS['database']->query(array(
+								'SELECT' => self::DATABASE,
+								'WHERE' => $table . '_id = ' . $request[$table . '_id'],
+								'LIMIT' => 1
+							)
+						);
+						break;
+					}
+				}
+				
+				// if the id is not found for the file, add it
+				if(count($files) == 0)
+				{
+					$id = self::handle(preg_replace($GLOBALS['alias_regexp'], $GLOBALS['paths'], $request['file']), true);
+					$files = $GLOBALS['database']->query(array(
 							'SELECT' => self::DATABASE,
 							'WHERE' => 'id = ' . $id,
 							'LIMIT' => 1
 						)
 					);
 					
-					if(count($tmp_id) == 0)
+					if(count($files) == 0)
 					{
 						$error = 'There was an error getting the IDs.';
 						return array();
 					}
-					
-					$ids[$file['id']] = $tmp_id[0];
 				}
-				
-				// merge with output array
-				$files[$index] = array_merge($ids[$file['id']], $files[$index]);
-		
-				// also set id to centralize id
-				$files[$index]['id'] = $ids[$file['id']]['id'];
 			}
-		}
-		elseif(isset($request['file']))
-		{
-			$files = array();
-			foreach($GLOBALS['tables'] as $i => $table)
+			else
 			{
-				if(isset($request[$table . '_id']) && is_numeric($request[$table . '_id']))
-				{
-					$files = $GLOBALS['database']->query(array(
-							'SELECT' => self::DATABASE,
-							'WHERE' => $table . '_id = ' . $request[$table . '_id'],
-							'LIMIT' => 1
-						)
-					);
-					break;
-				}
+				$files = parent::get($request, $count, $error, get_class());
 			}
 			
-			// if the id is not found for the file, add it
-			if(count($files) == 0)
-			{
-				$id = self::handle(preg_replace($GLOBALS['alias_regexp'], $GLOBALS['paths'], $request['file']), true);
-				$files = $GLOBALS['database']->query(array(
-						'SELECT' => self::DATABASE,
-						'WHERE' => 'id = ' . $id,
-						'LIMIT' => 1
-					)
-				);
-				
-				if(count($files) == 0)
-				{
-					$error = 'There was an error getting the IDs.';
-					return array();
-				}
-			}
-		}
-		else
-		{
-			$files = parent::get($request, &$count, &$error, get_class());
 		}
 		
 		return $files;
